# pikuma-3d-graphics

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run-clang-format.sh
deprecated/: math-types-deprecated.c  math-types-deprecated.h
src/: array.c  array.h  camera.c  camera.h  display.c  display.h  fps.c  fps.h  frustum.c  frustum.h  lighting.c  lighting.h  main.c  math-types.c  math-types.cpp  math-types.h  mesh.c  mesh.h  polygon.c  polygon.h  texture.c  texture.h  triangle.c  triangle.h
